Chore:shadcn 설치 위치 변경

--- a/components.json
+++ b/components.json
@@ -12,9 +12,9 @@
 	},
 	"iconLibrary": "lucide",
 	"aliases": {
-		"components": "@/components",
+		"components": "@/component",
 		"utils": "@/util/styles",
-		"ui": "@/components/ui",
+		"ui": "@/component/ui",
 		"lib": "@/lib",
 		"hooks": "@/hooks"
 	},
